--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title>School in the Cloud</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/home.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
     <header>
