building out css look

--- a/home.html
+++ b/home.html
@@ -11,20 +11,23 @@
 <body>
     <header>
        <section class="nav-bar">
-            <img src="logo-img" alt="School in the Cloud Logo">
-            <nav>
-                <a href="Home"></a>
-                <a href="Learn"></a>
-                <a href="Other"></a>
-                <a href="About"></a>
-                <a href="Contact"></a>
+            <h2 class="logo">School In The Sky</h2>
+            <nav class="main-nav">
+                <a href="#">Home</a>
+                <a href="#">Learn</a>
+                <a href="#">Other</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </nav>
+            <nav class="login">
+                <a href="#">Login</a>
             </nav>
        </section> 
     </header>
 
     <section>
-        <div class="top-content">
-            <img src="">
+        <div class="top-image">
+            <img src="./images/top-pic.png" height="600">
         </div>
     </section>
 
@@ -41,19 +44,44 @@
     </section>
 
     <section class="second-container">
-        <div>
+        <div class="overview-div">
             <h2>Overview</h2>
             <p>You need the dark in order to show the light. I'm sort of a softy, 
                 I couldn't shoot Bambi except with a camera. Have fun with it. Let's put a touch more of the magic here. 
                 This is probably the greatest thing to happen in my life - to be able to share this with you.
+                <br>
+                <br>
+                Only God can make a tree - but you can paint one. How do you make a round circle with a square knife? 
+                That's your challenge for the day. Let's make a happy little mountain now.
+                <br>
+                <br>
+                Working it up and down, back and forth. 
+                You're meant to have fun in life. You can work and carry-on and put lots of little happy things in here.
+                <br>
+                <br>
+                Each highlight must have it's own private shadow. 
+                If what you're doing doesn't make you happy - you're doing the wrong thing. 
+                When things happen - enjoy them. They're little gifts. Just relax and let it flow. 
+                That easy. Little trees and bushes grow however makes them happy. What the devil.
+                <br>
+                <br>
+                We tell people sometimes: we're like drug dealers, 
+                come into town and get everybody absolutely addicted to painting. 
+                It doesn't take much to get you addicted. Just use the old one inch brush. 
+                Let's do it again then, what the heck. When you do it your way you can go anywhere you choose. 
+                You better get your coat out, this is going to be a cold painting.
             </p>
-            <img src="" alt="text left and img right">
+        </div>
+        <div>
+            <img src="./images/overview-pic.jpg" alt="text left and img right">
         </div>
     </section>
 
     <section class="third-container">
         <div>
             <img src="" alt="img left and text right">
+        </div>
+        <div class="volunteer-div">
             <h2>Volunteers</h2>
             <p>Maybe, just to play a little, we'll put a little tree here. 
                 Here we're limited by the time we have. Now we don't want him to get lonely, 
@@ -65,7 +93,7 @@
     </section>
 
     <section class="fourth-container">
-        <div>
+        <div class="student-div">
             <h2>Student</h2>
             <p>Maybe, just to play a little, we'll put a little tree here. 
                 Here we're limited by the time we have. Now we don't want him to get lonely, 
@@ -73,14 +101,15 @@
                 It's hard to see things when you're too close. Take a step back and look.
             </p>
             <button>Learn More</button>
+        </div>
+        <div>
             <img src="" alt="text left and img right">
         </div>
     </section>
 
         
     <section class="fifth-container">
-        <div>
-            <img src="" alt="img left and text right">
+        <div class="admin-div">
             <h2>Admin</h2>
             <p>Maybe, just to play a little, we'll put a little tree here. 
                 Here we're limited by the time we have. Now we don't want him to get lonely, 
@@ -88,6 +117,9 @@
                 It's hard to see things when you're too close. Take a step back and look.
             </p>
             <button>Learn More</button>
+        </div>
+        <div>
+            <img src="" alt="img left and text right">
         </div>
     </section>
 
