--- a/home.html
+++ b/home.html
@@ -63,23 +63,16 @@
                 If what you're doing doesn't make you happy - you're doing the wrong thing. 
                 When things happen - enjoy them. They're little gifts. Just relax and let it flow. 
                 That easy. Little trees and bushes grow however makes them happy. What the devil.
-                <br>
-                <br>
-                We tell people sometimes: we're like drug dealers, 
-                come into town and get everybody absolutely addicted to painting. 
-                It doesn't take much to get you addicted. Just use the old one inch brush. 
-                Let's do it again then, what the heck. When you do it your way you can go anywhere you choose. 
-                You better get your coat out, this is going to be a cold painting.
             </p>
         </div>
         <div>
-            <img src="./images/overview-pic.jpg" alt="text left and img right">
+            <img src="./images/overview-pic.jpg" alt="campus">
         </div>
     </section>
 
     <section class="third-container">
         <div>
-            <img src="" alt="img left and text right">
+            <img src="./images/volunteer-pic.jpg" alt="volunteers">
         </div>
         <div class="volunteer-div">
             <h2>Volunteers</h2>
@@ -103,12 +96,15 @@
             <button>Learn More</button>
         </div>
         <div>
-            <img src="" alt="text left and img right">
+            <img src="./images/student-pic.jpg" alt="student">
         </div>
     </section>
 
         
     <section class="fifth-container">
+        <div>
+            <img src="./images/admin-pic.jpg" alt="img left and text right">
+        </div>
         <div class="admin-div">
             <h2>Admin</h2>
             <p>Maybe, just to play a little, we'll put a little tree here. 
@@ -117,9 +113,6 @@
                 It's hard to see things when you're too close. Take a step back and look.
             </p>
             <button>Learn More</button>
-        </div>
-        <div>
-            <img src="" alt="img left and text right">
         </div>
     </section>
 
