finished makeing site look pretty

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <title>School in the Cloud</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
@@ -49,20 +50,6 @@
             <p>You need the dark in order to show the light. I'm sort of a softy, 
                 I couldn't shoot Bambi except with a camera. Have fun with it. Let's put a touch more of the magic here. 
                 This is probably the greatest thing to happen in my life - to be able to share this with you.
-                <br>
-                <br>
-                Only God can make a tree - but you can paint one. How do you make a round circle with a square knife? 
-                That's your challenge for the day. Let's make a happy little mountain now.
-                <br>
-                <br>
-                Working it up and down, back and forth. 
-                You're meant to have fun in life. You can work and carry-on and put lots of little happy things in here.
-                <br>
-                <br>
-                Each highlight must have it's own private shadow. 
-                If what you're doing doesn't make you happy - you're doing the wrong thing. 
-                When things happen - enjoy them. They're little gifts. Just relax and let it flow. 
-                That easy. Little trees and bushes grow however makes them happy. What the devil.
             </p>
         </div>
         <div>
