added nav to partial and made about page

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                 <a href="#">Home</a>
                 <a href="#">Learn</a>
                 <a href="#">Other</a>
-                <a href="#">About</a>
+                <a href="./about.html">About</a>
                 <a href="#">Contact</a>
             </nav>
             <nav class="login">
