added about page and styled it

--- a/about.html
+++ b/about.html
@@ -1,29 +1,62 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>School in the Cloud</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+        <link href="css/index.css" rel="stylesheet">
+    </head>
 
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>School in the Cloud</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
-</head>
-
-<body>
-    <header>
-       <section class="nav-bar">
-            <h2 class="logo">School In The Sky</h2>
-            <nav class="main-nav">
-                <a href="./home.html">Home</a>
-                <a href="#">Learn</a>
-                <a href="#">Other</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-            </nav>
-            <nav class="login">
-                <a href="#">Login</a>
-            </nav>
-       </section> 
+    <body>
+        <header>
+        <section class="nav-bar">
+                <h2 class="logo">School In The Sky</h2>
+                <nav class="main-nav">
+                    <a href="./home.html">Home</a>
+                    <a href="#">Learn</a>
+                    <a href="#">Other</a>
+                    <a href="./about.html">About</a>
+                    <a href="#">Contact</a>
+                </nav>
+                <nav class="login">
+                    <a href="#">Login</a>
+                </nav>
+        </section> 
     </header>
-</body>
+
+    <h1 class="top-header"> Meet The Team</h1>
+    <section class="team">
+        <div class="person">
+            <img src="./images/place-holder.png" alt="">
+            <h2>Person Name</h2>
+            <p>This person is pretty cool, here's why...</p>
+        </div>
+        <div class="person">
+            <img src="./images/place-holder.png" alt="">
+            <h2>Person Name</h2>
+            <p>This person is pretty cool, here's why...</p>
+        </div>
+        <div class="person">
+            <img src="./images/place-holder.png" alt="">
+            <h2>Person Name</h2>
+            <p>This person is pretty cool, here's why...</p>
+        </div>
+        <div class="person">
+            <img src="./images/place-holder.png" alt="">
+            <h2>Person Name</h2>
+            <p>This person is pretty cool, here's why...</p>
+        </div>
+        <div class="person">
+            <img src="./images/place-holder.png" alt="">
+            <h2>Person Name</h2>
+            <p>This person is pretty cool, here's why...</p>
+        </div>
+        <div class="person">
+            <img src="./images/place-holder.png" alt="">
+            <h2>Person Name</h2>
+            <p>This person is pretty cool, here's why...</p>
+        </div>
+    </section>
