added DOM manipulation and event listener

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
         <link href="css/index.css" rel="stylesheet">
+        <script src="js/about.js" async></script>
     </head>
 
     <body>
