added site copywrite

--- a/about.html
+++ b/about.html
@@ -32,32 +32,49 @@
     <section class="team">
         <div class="person">
             <img src="./images/place-holder.png" alt="">
-            <h2>Person Name</h2>
+            <h2>Brandon Allison</h2>
+            <p>Backend extraordinaire. Once built a functional 
+                website backend with nothing but a rock and a stick.
+                He's pretty much the John Wick of backend web dev.
+            </p>
+        </div>
+        <div class="person">
+            <img src="./images/place-holder.png" alt="">
+            <h2>Maksim Vakarchuck</h2>
+            <p>His code is as complex as his last name, 
+                this prodigy shouldn't be overlooked.
+                He's the only person to ever write a
+                "hello, world" program whilst still
+                in the womb.
+            </p>
+        </div>
+        <div class="person">
+            <img src="./images/place-holder.png" alt="">
+            <h2>Christian Helms</h2>
+            <p>Nothing special, just some guy from Missouri
+                whose learning to code at Lambda and enjoying
+                it a lot. Check back later and maybe I'll make
+                my bio interesting also...probably not.
+            </p>
+        </div>
+        <div class="person">
+            <img src="./images/place-holder.png" alt="">
+            <h2>Bryce Soghigian</h2>
+            <p>Bryce once spent a week helping the Mexican 
+                Cartel build a website that could manifest 
+                cocaine and other narcotics out of thin air
+                using nothing more than eventListeners in
+                Javascript.
+            </p>
+        </div>
+        <div class="person">
+            <img src="./images/place-holder.png" alt="">
+            <h2>Chris Reilly</h2>
             <p>This person is pretty cool, here's why...</p>
         </div>
         <div class="person">
             <img src="./images/place-holder.png" alt="">
-            <h2>Person Name</h2>
-            <p>This person is pretty cool, here's why...</p>
-        </div>
-        <div class="person">
-            <img src="./images/place-holder.png" alt="">
-            <h2>Person Name</h2>
-            <p>This person is pretty cool, here's why...</p>
-        </div>
-        <div class="person">
-            <img src="./images/place-holder.png" alt="">
-            <h2>Person Name</h2>
-            <p>This person is pretty cool, here's why...</p>
-        </div>
-        <div class="person">
-            <img src="./images/place-holder.png" alt="">
-            <h2>Person Name</h2>
-            <p>This person is pretty cool, here's why...</p>
-        </div>
-        <div class="person">
-            <img src="./images/place-holder.png" alt="">
-            <h2>Person Name</h2>
+            <h2>Ekunola Easybuoy</h2>
             <p>This person is pretty cool, here's why...</p>
         </div>
     </section>
