--- a/home.html
+++ b/home.html
@@ -33,12 +33,11 @@
 
     <section class="first-container">
         <div>
-            <h1>Cool Header About School In The Cloud</h1>
-            <p>We'll put a happy little bush here. Let your imagination be your guide. 
-                It just happens - whether or not you worried about it or tried to plan it. 
-                You can do anything here - the only pre-requisite is that it makes you happy. 
-                Let your imagination just wonder around when you're doing these things. 
-                Let that brush dance around there and play.
+            <h1>Welcome To School In The Cloud</h1>
+            <p>At School In The Cloud, we pride ourselves on getting the best teacher to student ratios possible.
+                We are planning on expanding to 20 new cities in the upcoming year so keep an eye out because we
+                could be in your city! We help students learn with after school tutoring every day (including
+                weekends) and will always shoot for the moon!
             </p>
         </div>
     </section>
@@ -46,9 +45,9 @@
     <section class="second-container">
         <div class="overview-div">
             <h2>Overview</h2>
-            <p>You need the dark in order to show the light. I'm sort of a softy, 
-                I couldn't shoot Bambi except with a camera. Have fun with it. Let's put a touch more of the magic here. 
-                This is probably the greatest thing to happen in my life - to be able to share this with you.
+            <p>Our goal is to provide the highest possible student to teacher ratio to help studetns
+                truly become all they can be and excell in their education. We offer tutoring on a 
+                variety of subjects from K-12 and are adding more every day!
             </p>
         </div>
         <div>
@@ -62,10 +61,9 @@
         </div>
         <div class="volunteer-div">
             <h2>Volunteers</h2>
-            <p>Maybe, just to play a little, we'll put a little tree here. 
-                Here we're limited by the time we have. Now we don't want him to get lonely, 
-                so we'll give him a little friend. Give him a friend, we forget the trees get lonely too. 
-                It's hard to see things when you're too close. Take a step back and look.
+            <p>Our volunteers have a background in education and enjoy teaching and helping
+                young minds to learn over a variety of subjects. If you're interested in becoming
+                a volunteer at Cloud In The Sky, click the "lean more" button found below.
             </p>
             <button>Learn More</button>
         </div>
@@ -74,10 +72,10 @@
     <section class="fourth-container">
         <div class="student-div">
             <h2>Student</h2>
-            <p>Maybe, just to play a little, we'll put a little tree here. 
-                Here we're limited by the time we have. Now we don't want him to get lonely, 
-                so we'll give him a little friend. Give him a friend, we forget the trees get lonely too. 
-                It's hard to see things when you're too close. Take a step back and look.
+            <p>We believe in only the best for out students; that's why then you join Cloud In The Sky, 
+                you'll be getting the best help we can provide. All students are assigned a specific volunteer
+                to answer any questions as well as another volunteer for their study groups. Study groups are
+                always as small as possible, 1 on 1 if possible.
             </p>
             <button>Learn More</button>
         </div>
@@ -93,10 +91,10 @@
         </div>
         <div class="admin-div">
             <h2>Admin</h2>
-            <p>Maybe, just to play a little, we'll put a little tree here. 
-                Here we're limited by the time we have. Now we don't want him to get lonely, 
-                so we'll give him a little friend. Give him a friend, we forget the trees get lonely too. 
-                It's hard to see things when you're too close. Take a step back and look.
+            <p>Our wonderful admins will reach out to each student and find out what subjects you
+                need the most help in and how you best learn; be it visually, auditory, or hands on,
+                and match you with the best volunteer for the job! Admins also get to know the Volunteers
+                and set them up in their own roles.
             </p>
             <button>Learn More</button>
         </div>
@@ -105,11 +103,10 @@
     <section class="sixth-container">
         <div>
             <h2>Learn With Us!</h2>
-            <p>You have to allow the paint to break to make it beautiful. 
-                Just think about these things in your mind - then bring them into your world. 
-                Look around, look at what we have. Beauty is everywhere, you only have to look to see it. 
-                You could sit here for weeks with your one hair brush trying to do that - 
-                or you could do it with one stroke with an almighty brush.
+            <p>To get started with Cloud In The Sky, all you have to do is click the button 
+                below that says "sign up" and you're off! There are no fees to join Cloud In
+                The Sky and there never will be! We are a free service to help you or your 
+                child succeed in school!
             </p>
             <button>Sign Up</button>
         </div>
