--- a/about.html
+++ b/about.html
@@ -62,11 +62,10 @@
         <div class="person">
             <img src="./images/place-holder.png" alt="">
             <h2>Bryce Soghigian</h2>
-            <p>Bryce once spent a week helping the Mexican 
-                Cartel build a website that could manifest 
-                cocaine and other narcotics out of thin air
-                using nothing more than eventListeners in
-                Javascript.
+            <p>Bryce is a ui designer whose amazing at 
+                everything any anything he does. I had
+                another weird bio for this one but it involved
+                the mention of narcotics so I took it out.
             </p>
         </div>
         <div class="person">
